...
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ingredient_information"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
...
                android:layout_marginTop="24dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ing_content_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
...
                android:layout_marginTop="24dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ing_content_desc_input"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:ems="10"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/ing_content_date_input"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ing_content_quantity_input"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:background="@android:drawable/editbox_dropdown_light_frame"
                    android:ems="10"
                    android:includeFontPadding="false"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:paddingStart="8sp"
                    app:layout_constraintStart_toStartOf="parent" />

                <Spinner
                    android:id="@+id/ing_content_unit_input"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
...
                android:layout_marginTop="24dp"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/ing_content_location_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="32dp"
                android:background="@android:drawable/btn_dropdown"
...
