...
        android:title = "Recipes"


        />

    <item
        android:id = "@+id/ingredient_menu"
        android:icon = "@drawable/ingredients_icon"
        android:title = "Ingredients"


        />
    <item
...
